Added Menu Page items

--- a/menu.html
+++ b/menu.html
@@ -1,12 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="menu.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="menu.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="navbar">
+      <i class="fa-solid fa-cart-shopping"></i>
+      <div class="cart"></div>
+    </div>
+
+    <h1>Full Menu</h1>
+
+    <div class="menu">
+      <div class="breakFast">
+        <div class="break">
+          <img src="../menuImages/img1.png" alt="" />
+          <h4>Omelette McMuffin Meal</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img2.png" alt="" />
+          <h4>Chicken Sausage McMuffin w/Egg Meal</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img3.png" alt="" />
+          <h4>Chicken Sausage McMuffin Meal</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img4.png" alt="" />
+          <h4>Hot Cakes</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img5.png" alt="" />
+          <h4>Big Breakfast</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img6.png" alt="" />
+          <h4>Egg N’ Hashbrowns Wrap</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+      </div>
+
+      <div class="ChickenFish">
+        <div class="break">
+          <img src="../menuImages/img7.png" alt="" />
+          <h4>Hot N’ Crispy</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img8.png" alt="" />
+          <h4>McChicken</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img9.png" alt="" />
+          <h4>Spicy McCrispy</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img10.png" alt="" />
+          <h4>Mini McArabia</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img11.png" alt="" />
+          <h4>Chicken Mac</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img12.png" alt="" />
+          <h4>Filet-o-Fish</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+      </div>
+
+      <div class="Wraps">
+        <div class="break">
+          <img src="../menuImages/img13.png" alt="" />
+          <h4>Hot N’ Crispy</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img14.png" alt="" />
+          <h4>McChicken</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img15.png" alt="" />
+          <h4>Spicy McCrispy</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+      </div>
+
+      <div class="HappyMeal">
+        <div class="break">
+          <img src="../menuImages/img16.png" alt="" />
+          <h4>Happy Meal Beef Burger</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img17.png" alt="" />
+          <h4>Happy Meal Cheese Burger</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img18.png" alt="" />
+          <h4>Happy Meal Chicken McNuggets</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+      </div>
+
+      <div class="Desserts">
+        <div class="break">
+          <img src="../menuImages/img19.png" alt="" />
+          <h4>Double Chocolate Pie</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img20.png" alt="" />
+          <h4>Brownie Sundae</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img21.png" alt="" />
+          <h4>McFlurry Oreo</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img22.png" alt="" />
+          <h4>Strawberry Sundae</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img23.png" alt="" />
+          <h4>Vanilla Cone</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img24.png" alt="" />
+          <h4>Choco Cone</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+      </div>
+
+      <div class="Beverages">
+        <div class="break">
+          <img src="../menuImages/img25.png" alt="" />
+          <h4>Orange 100% Fruit Juice</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img26.png" alt="" />
+          <h4>Milo</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img27.png" alt="" />
+          <h4>Chocolate Shake</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img28.png" alt="" />
+          <h4>Strawberry Shake</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img29.png" alt="" />
+          <h4>Vanilla Shake</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img30.png" alt="" />
+          <h4>Coke</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="break">
+          <img src="../menuImages/img31.png" alt="" />
+          <h4>Fanta</h4>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://kit.fontawesome.com/64f984f188.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
