Added device responsiveness

--- a/menu.html
+++ b/menu.html
@@ -11,43 +11,50 @@
     />
   </head>
   <body>
-    <div class="navbar">
-      <i class="fa-solid fa-cart-shopping"></i>
-      <div class="cart"></div>
+    <div class="navbar"></div>
+    <div class="cart">
+      <div class="closebtn">
+        <button class="btn"><i class="fa-solid fa-x"></i></button>
+      </div>
     </div>
 
     <h1>Full Menu</h1>
-
     <div class="menu">
       <div class="breakFast">
         <div class="break">
           <img src="../menuImages/img1.png" alt="" />
           <h4>Omelette McMuffin Meal</h4>
+          <h5>Price: <span>280</span> Rs/-</h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img2.png" alt="" />
           <h4>Chicken Sausage McMuffin w/Egg Meal</h4>
+          <h5>Price: <span>320 </span> Rs/-</h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img3.png" alt="" />
           <h4>Chicken Sausage McMuffin Meal</h4>
+          <h5>Price: <span>300 </span> Rs/-</h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img4.png" alt="" />
           <h4>Hot Cakes</h4>
+          <h5>Price: <span>250 </span> Rs/-</h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img5.png" alt="" />
           <h4>Big Breakfast</h4>
+          <h5>Price: <span>350 </span> Rs/-</h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img6.png" alt="" />
           <h4>Egg N’ Hashbrowns Wrap</h4>
+          <h5>Price: <span>180 </span> Rs/-</h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
       </div>
@@ -56,31 +63,37 @@
         <div class="break">
           <img src="../menuImages/img7.png" alt="" />
           <h4>Hot N’ Crispy</h4>
+          <h5>Price: <span>200 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img8.png" alt="" />
           <h4>McChicken</h4>
+          <h5>Price: <span>220 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img9.png" alt="" />
           <h4>Spicy McCrispy</h4>
+          <h5>Price: <span>250 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img10.png" alt="" />
           <h4>Mini McArabia</h4>
+          <h5>Price: <span>280 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img11.png" alt="" />
           <h4>Chicken Mac</h4>
+          <h5>Price: <span>300 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img12.png" alt="" />
           <h4>Filet-o-Fish</h4>
+          <h5>Price: <span>240 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
       </div>
@@ -88,17 +101,20 @@
       <div class="Wraps">
         <div class="break">
           <img src="../menuImages/img13.png" alt="" />
-          <h4>Hot N’ Crispy</h4>
+          <h4>Hot N’ Crispy Wrap</h4>
+          <h5>Price: <span>220 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img14.png" alt="" />
-          <h4>McChicken</h4>
+          <h4>McChicken Wrap</h4>
+          <h5>Price: <span>240 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img15.png" alt="" />
-          <h4>Spicy McCrispy</h4>
+          <h4>Spicy McCrispy Wrap</h4>
+          <h5>Price: <span>260 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
       </div>
@@ -107,16 +123,19 @@
         <div class="break">
           <img src="../menuImages/img16.png" alt="" />
           <h4>Happy Meal Beef Burger</h4>
+          <h5>Price: <span>180 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img17.png" alt="" />
           <h4>Happy Meal Cheese Burger</h4>
+          <h5>Price: <span>190 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img18.png" alt="" />
           <h4>Happy Meal Chicken McNuggets</h4>
+          <h5>Price: <span>200 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
       </div>
@@ -125,31 +144,37 @@
         <div class="break">
           <img src="../menuImages/img19.png" alt="" />
           <h4>Double Chocolate Pie</h4>
+          <h5>Price: <span>150 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img20.png" alt="" />
           <h4>Brownie Sundae</h4>
+          <h5>Price: <span>180 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img21.png" alt="" />
           <h4>McFlurry Oreo</h4>
+          <h5>Price: <span>200 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img22.png" alt="" />
           <h4>Strawberry Sundae</h4>
+          <h5>Price: <span>150 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img23.png" alt="" />
           <h4>Vanilla Cone</h4>
+          <h5>Price: <span>120 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img24.png" alt="" />
           <h4>Choco Cone</h4>
+          <h5>Price: <span>140 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
       </div>
@@ -158,36 +183,31 @@
         <div class="break">
           <img src="../menuImages/img25.png" alt="" />
           <h4>Orange 100% Fruit Juice</h4>
+          <h5>Price: <span>80 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img26.png" alt="" />
           <h4>Milo</h4>
+          <h5>Price: <span>100 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img27.png" alt="" />
           <h4>Chocolate Shake</h4>
+          <h5>Price: <span>120 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img28.png" alt="" />
-          <h4>Strawberry Shake</h4>
+          <h4>Coca-Cola</h4>
+          <h5>Price: <span>60 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="break">
           <img src="../menuImages/img29.png" alt="" />
-          <h4>Vanilla Shake</h4>
-          <button class="add-to-cart">Add to Cart</button>
-        </div>
-        <div class="break">
-          <img src="../menuImages/img30.png" alt="" />
-          <h4>Coke</h4>
-          <button class="add-to-cart">Add to Cart</button>
-        </div>
-        <div class="break">
-          <img src="../menuImages/img31.png" alt="" />
           <h4>Fanta</h4>
+          <h5>Price: <span>60 Rs/-</span></h5>
           <button class="add-to-cart">Add to Cart</button>
         </div>
       </div>
@@ -197,5 +217,6 @@
       src="https://kit.fontawesome.com/64f984f188.js"
       crossorigin="anonymous"
     ></script>
+    <script src="app2.js"></script>
   </body>
 </html>
