Added Add to cart functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
               <li class="search"><a href="">Search</a></li>
               <li class="location"><a href="">Locate Me</a></li>
-              <li><button>Order on McDelivery</button></li>
+              <li><button id="order">Order on McDelivery</button></li>
             </ul>
           </div>
         </div>
