--- a/menu.html
+++ b/menu.html
@@ -217,6 +217,7 @@
       src="https://kit.fontawesome.com/64f984f188.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="app2.js"></script>
   </body>
 </html>
